Fix overflow

--- a/components/_trustpilot.scss
+++ b/components/_trustpilot.scss
@@ -136,6 +136,7 @@
     }
 
     .swiper-container {
+        overflow: hidden;
         padding: 10px;
         margin: -10px;
         margin-bottom: 0;
